<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Japanese Traditional Time</string>
    <string name="auto_lat_long">Use current location</string>
    <string name="location">Location</string>
    <string name="location_ex">Change stored location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="clock">Clock</string>
    <string name="settings">Settings</string>
    <string name="notify">Display notifications</string>
    <string name="notify_ex">Display current hour glyph in status bar.</string>
    <string name="today">Today</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="noon">Noon</string>
    <string name="midnight">Midnight</string>
    <string name="hour_names">Hour names</string>
    <string name="no_providers">Unable to determine location.\nPlease enable location service.</string>

    <string-array name="hour_name_option_names">
        <item>Default</item>
        <item>Romaji</item>
        <item>Hiragana</item>
    </string-array>

    <string-array name="hour">
        <item>The Cock</item>
        <item>The Dog</item>
        <item>The Boar</item>
        <item>The Rat</item>
        <item>The Ox</item>
        <item>The Tiger</item>
        <item>The Hare</item>
        <item>The Dragon</item>
        <item>The Serpent</item>
        <item>The Horse</item>
        <item>The Ram</item>
        <item>The Monkey</item>
    </string-array>
    <string-array name="hour_of">
        <item>Hour of the Cock</item>
        <item>Hour of the Dog</item>
        <item>Hour of the Boar</item>
        <item>Hour of the Rat</item>
        <item>Hour of the Ox</item>
        <item>Hour of the Tiger</item>
        <item>Hour of the Hare</item>
        <item>Hour of the Dragon</item>
        <item>Hour of the Serpent</item>
        <item>Hour of the Horse</item>
        <item>Hour of the Ram</item>
        <item>Hour of the Monkey</item>
    </string-array>
    <string-array name="quarter">
        <item>First quarter</item>
        <item>Second quarter</item>
        <item>Third quarter</item>
        <item>Fourth quarter</item>
    </string-array>

    <string name="language">Names and languages</string>
    <string name="appearance">Look and feel</string>
    <string name="widget1">JTT: Single hour</string>
    <string name="widget12">JTT: Clock</string>
    <string name="locale">Language</string>
    <string name="locale_default">Default</string>

    <string-array name="theme_names">
        <item>Translucent</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>

    <string-array name="widget_theme_names">
        <item>Translucent</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>

    <string name="pref_theme">Theme</string>
    <string name="pref_widget">Widget theme</string>

</resources>
