<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="location_screen">

    <com.aragaer.jtt.LocationPreference
        android:defaultValue="0.0:0.0"
        android:key="jtt_loc"
        android:title="@string/location_ex" />

    <Preference
        android:id="@+id/get_location"
        android:key="jtt_auto"
        android:title="@string/auto_lat_long" />

</PreferenceScreen>
